# Epaper2.13

./: CMakeLists.txt  README.md  sdkconfig
BSP/spi/: Epaper_func.c  Epaper_func.h  my_spi.c  my_spi.h  readme.md
BSP/spi/GUI/: GUI_Paint.c  GUI_Paint.h
BSP/spi/img/: ImageData.c  ImageData.h
main/: CMakeLists.txt  main.c
